--- a/sass/base/_typhography.scss
+++ b/sass/base/_typhography.scss
@@ -1,11 +1,36 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Nunito', sans-serif;
 }
-.heading_secondary{
-    font-size: 4rem;
-    letter-spacing: .3rem;
+.heading__secondary{
+    position: relative;
+    font-size: 5rem;
+    text-align: left;
+    font-weight: 300;
     line-height: 5rem;
-    text-transform: uppercase;
     color: white;
-    
+    width: 90%;    
+}
+
+.heading__tertiary{
+    position: absolute;
+    right: 33rem;
+    top: 3rem;
+    z-index: 100;
+    padding: 2rem 5rem;
+    font-size: 4.5rem;
+    font-weight: 400;
+    color: var(--color-grey-dark);
+    letter-spacing: 1.5rem;
+    text-transform: uppercase;
+    width: 50%;
+    // background-image: var(--gradient-blue);
+
+    &:after{
+        margin-top: 1rem;
+        width: 100%;
+        height: 1.5px;
+        display: block;
+        content: "";
+        background-color: var(--color-grey-dark);
+    }
 }
