--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -6,23 +6,26 @@
         text-transform: uppercase;
         font-size: 1.6rem;
         font-weight: 400;
-        padding: 1.8rem;
+        padding: 1.8rem 4rem;
         border: none;        
         color: var(--color-white);
         background-color: #FC5C22;
         border-radius: 100px;
         // border: solid 2px var(--color-grey);
         // box-shadow: 0 1px 10rem rgba(#FFF,.2);
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 1%); 
         transition: all .2s ease;
     }
     &:hover{
-        transform: translateY(-.51rem);
+        transform: translate(-50%, -.51rem);
         box-shadow: 0 1rem 1rem rgba(#000,.2);
     }
     &:active,
     &:focus {
         outline: none;
-        transform: translateY(-1px);
+        transform: translate(-50%, -1px);
     }
 
     &-big{
