--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,800');
+
+@import url('https://fonts.googleapis.com/css?family=Nunito:300i,400,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two');  
 
 @import "abstract/animations";
 @import "abstract/variables";
@@ -8,6 +10,8 @@
 
 @import "components/btn";
 @import "components/nav";
+@import "components/about";
+@import "components/featured";
 
 @import "layout/header";
 
